--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>GAM Test Site</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9437919448107340"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <h1>Google Ad Manager</h1>
