--- a/privacy.html
+++ b/privacy.html
@@ -2,14 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9437919448107340"
      crossorigin="anonymous"></script>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 20px; line-height: 1.6; }
+    h1 { color: #333; }
+    a { color: #1a73e8; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+  </style>
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p>This website uses Google services such as Google AdSense and Google Ad Manager.</p>
-  <p>Google may use cookies or device identifiers to serve ads. Users may opt out of personalized advertising by visiting <a href="https://adssettings.google.com/">Google Ad Settings</a>.</p>
-  <p>No personal information is collected by this site directly. This site is used solely for testing purposes with Google Ad Manager.</p>
+
+  <p>This website uses Google services such as <strong>Google AdSense</strong> and <strong>Google Ad Manager</strong> to display ads.</p>
+
+  <h2>Information We Collect</h2>
+  <p>This site does not collect personal information directly. However, Google may use cookies, device identifiers, and similar technologies to serve personalized ads.</p>
+
+  <h2>How You Can Control Ads</h2>
+  <p>You can opt out of personalized advertising by visiting <a href="https://adssettings.google.com/">Google Ad Settings</a>. You can also clear cookies in your browser at any time.</p>
+
+  <h2>GDPR – European Users</h2>
+  <p>If you are located in the European Union, you have rights under GDPR regarding your personal data. This site uses Google services that may collect information for ad personalization. By using this site, you consent to the use of cookies and similar technologies as described in this policy.</p>
+
+  <h2>CCPA – California Residents</h2>
+  <p>If you are a California resident, you have rights under the California Consumer Privacy Act (CCPA), including the right to opt out of the sale of personal information. This site does not sell personal information directly.</p>
+
+  <h2>For Testing Purposes</h2>
+  <p>This site is currently used solely for testing Google Ad Manager integration and does not process personal information itself.</p>
 </body>
 </html>
